colcon_ws/log/build_2022-09-10_03-43-41/dasc_robot/stderr.log
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp: In constructor ‘JoystickController::JoystickController(std::shared_ptr<DASCRobot>)’:
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp:20:63: error: taking address of rvalue [-fpermissive]
   20 |         &std::bind(&JoystickController::joy_callback, this, _1));
      |                                                               ^
In file included from /opt/ros/foxy/include/rclcpp/client.hpp:32,
                 from /opt/ros/foxy/include/rclcpp/callback_group.hpp:23,
                 from /opt/ros/foxy/include/rclcpp/any_executable.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/memory_strategy.hpp:24,
                 from /opt/ros/foxy/include/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/foxy/include/rclcpp/executor_options.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/executor.hpp:33,
                 from /opt/ros/foxy/include/rclcpp/executors/multi_threaded_executor.hpp:26,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:21,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /root/colcon_ws/src/robot-framework/include/dasc_robot/DASCRobots.hpp:6,
                 from /root/colcon_ws/src/robot-framework/src/joystick_control.cpp:2:
/opt/ros/foxy/include/rclcpp/function_traits.hpp: In instantiation of ‘struct rclcpp::function_traits::function_traits<std::_Bind<void (JoystickController::*(JoystickController*, std::_Placeholder<1>))(sensor_msgs::msg::Joy_<std::allocator<void> >)>*>’:
/opt/ros/foxy/include/rclcpp/subscription_traits.hpp:97:8:   required from ‘struct rclcpp::subscription_traits::has_message_type<std::_Bind<void (JoystickController::*(JoystickController*, std::_Placeholder<1>))(sensor_msgs::msg::Joy_<std::allocator<void> >)>*, std::allocator<void>, void, void, void, void>’
/opt/ros/foxy/include/rclcpp/node.hpp:204:5:   required by substitution of ‘template<class MessageT, class CallbackT, class AllocatorT, class CallbackMessageT, class SubscriptionT, class MessageMemoryStrategyT> std::shared_ptr<SubscriptionT> rclcpp::Node::create_subscription(const string&, const rclcpp::QoS&, CallbackT&&, const rclcpp::SubscriptionOptionsWithAllocator<AllocatorT>&, typename MessageMemoryStrategyT::SharedPtr) [with MessageT = sensor_msgs::msg::Joy_<std::allocator<void> >; CallbackT = std::_Bind<void (JoystickController::*(JoystickController*, std::_Placeholder<1>))(sensor_msgs::msg::Joy_<std::allocator<void> >)>*; AllocatorT = std::allocator<void>; CallbackMessageT = <missing>; SubscriptionT = <missing>; MessageMemoryStrategyT = <missing>]’
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp:20:64:   required from here
/opt/ros/foxy/include/rclcpp/function_traits.hpp:52:40: error: ‘operator()’ is not a member of ‘std::_Bind<void (JoystickController::*(JoystickController*, std::_Placeholder<1>))(sensor_msgs::msg::Joy_<std::allocator<void> >)>*’
   52 |     typename function_traits<decltype( &FunctionT::operator())>::arguments>::type;
      |                                        ^~~~~~~~~~~~~~~~~~~~~~
/opt/ros/foxy/include/rclcpp/function_traits.hpp:52:40: error: ‘operator()’ is not a member of ‘std::_Bind<void (JoystickController::*(JoystickController*, std::_Placeholder<1>))(sensor_msgs::msg::Joy_<std::allocator<void> >)>*’
/opt/ros/foxy/include/rclcpp/function_traits.hpp:52:40: error: ‘operator()’ is not a member of ‘std::_Bind<void (JoystickController::*(JoystickController*, std::_Placeholder<1>))(sensor_msgs::msg::Joy_<std::allocator<void> >)>*’
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp:20:64: error: no matching function for call to ‘JoystickController::create_subscription<sensor_msgs::msg::Joy>(const char [5], int, std::_Bind_helper<false, void (JoystickController::*)(sensor_msgs::msg::Joy_<std::allocator<void> >), JoystickController*, const std::_Placeholder<1>&>::type*)’
   20 |         &std::bind(&JoystickController::joy_callback, this, _1));
      |                                                                ^
In file included from /opt/ros/foxy/include/rclcpp/executors/single_threaded_executor.hpp:28,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:22,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /root/colcon_ws/src/robot-framework/include/dasc_robot/DASCRobots.hpp:6,
                 from /root/colcon_ws/src/robot-framework/src/joystick_control.cpp:2:
/opt/ros/foxy/include/rclcpp/node.hpp:213:3: note: candidate: ‘template<class MessageT, class CallbackT, class AllocatorT, class CallbackMessageT, class SubscriptionT, class MessageMemoryStrategyT> std::shared_ptr<SubscriptionT> rclcpp::Node::create_subscription(const string&, const rclcpp::QoS&, CallbackT&&, const rclcpp::SubscriptionOptionsWithAllocator<AllocatorT>&, typename MessageMemoryStrategyT::SharedPtr)’
  213 |   create_subscription(
      |   ^~~~~~~~~~~~~~~~~~~
/opt/ros/foxy/include/rclcpp/node.hpp:213:3: note:   substitution of deduced template arguments resulted in errors seen above
make[2]: *** [CMakeFiles/joystick_controller.dir/build.make:63: CMakeFiles/joystick_controller.dir/src/joystick_control.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:308: CMakeFiles/joystick_controller.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
